@@ -13,11 +13,9 @@ fixtures:
       branch: simp-master
     logrotate: https://github.com/simp/pupmod-simp-logrotate
     rsyslog: https://github.com/simp/pupmod-simp-rsyslog
+    simp_options: https://github.com/simp/pupmod-simp-simp_options
     simpcat: https://github.com/simp/pupmod-simp-simpcat
     simplib: https://github.com/simp/pupmod-simp-simplib
-    stdlib:
-      repo: https://github.com/simp/puppetlabs-stdlib
-      branch: simp-master
-
+    stdlib: https://github.com/simp/puppetlabs-stdlib
   symlinks:
     pki: "#{source_dir}"
