@@ -1,7 +1,7 @@
 Obsoletes: pupmod-pki-test >= 0.0.1
 Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
 Requires: pupmod-puppetlabs-stdlib >= 4.9.0-0
-Requires: pupmod-simp-auditd < 7.0.0-0
-Requires: pupmod-simp-auditd >= 6.0.0-0
-Requires: pupmod-simp-simplib >= 2.0.0-0
+Requires: pupmod-simp-auditd < 8.0.0-0
+Requires: pupmod-simp-auditd >= 7.0.0-0
+Requires: pupmod-simp-simplib >= 2.1.0-0
 Requires: pupmod-simp-simplib < 3.0.0-0
