@@ -6,16 +6,24 @@ describe 'pki_sync' do
 
   let(:manifest) {
   <<-EOS
-  file { '/etc/pki/cacerts':
+  file { '/etc/pki/simp':
     ensure  => 'directory',
     owner   => 'root',
     group   => 'root',
     mode    => '0644',
     seltype => 'cert_t',
     recurse => true,
-    tag     => 'firstrun'
+    before  => Pki_cert_sync['/etc/pki/simp/cacerts']
   }
-  pki_cert_sync { '/etc/pki/cacerts':
+  file { '/etc/pki/simp/cacerts':
+    ensure  => 'directory',
+    owner   => 'root',
+    group   => 'root',
+    mode    => '0644',
+    seltype => 'cert_t',
+    recurse => true,
+  }
+  pki_cert_sync { '/etc/pki/simp/cacerts':
     source => '/etc/pki/simp-testing/pki/cacerts/',
     purge  => true,
   }
@@ -24,16 +32,24 @@ describe 'pki_sync' do
 
   let(:no_purge_manifest) {
   <<-EOS
-  file { '/etc/pki/cacerts':
+  file { '/etc/pki/simp':
     ensure  => 'directory',
     owner   => 'root',
     group   => 'root',
     mode    => '0644',
     seltype => 'cert_t',
     recurse => true,
-    tag     => 'firstrun'
+    before  => Pki_cert_sync['/etc/pki/simp/cacerts']
   }
-  pki_cert_sync { '/etc/pki/cacerts':
+  file { '/etc/pki/simp/cacerts':
+    ensure  => 'directory',
+    owner   => 'root',
+    group   => 'root',
+    mode    => '0644',
+    seltype => 'cert_t',
+    recurse => true,
+  }
+  pki_cert_sync { '/etc/pki/simp/cacerts':
     source => '/etc/pki/simp-testing/pki/cacerts/',
     purge => false
   }
@@ -64,28 +80,28 @@ describe 'pki_sync' do
         apply_manifest_on(host, manifest, :catch_failures => true)
       end
 
-      describe file('/etc/pki/cacerts/') {
+      describe file('/etc/pki/simp/cacerts/') {
         it { is_expected.to be_file }
       }
 
       it 'the cacert should be synced' do
-        on host, "cmp $(find /etc/pki/simp-testing/pki/cacerts/some/subdirectory/ /etc/pki/cacerts/some/subdirectory/ -name cacert_*.pem)", :acceptable_exit_codes => [0]
+        on host, "cmp $(find /etc/pki/simp-testing/pki/cacerts/some/subdirectory/ /etc/pki/simp/cacerts/some/subdirectory/ -name cacert_*.pem)", :acceptable_exit_codes => [0]
       end
 
       it 'a link to the cert should be created at the top level' do
-        on host, "ls -l /etc/pki/cacerts/ | grep $(ls /etc/pki/cacerts/some/subdirectory/ | grep .pem)", :acceptable_exit_codes => [0]
+        on host, "ls -l /etc/pki/simp/cacerts/ | grep $(ls /etc/pki/simp/cacerts/some/subdirectory/ | grep .pem)", :acceptable_exit_codes => [0]
       end
 
       it 'the cert should be appended to cacerts.pem' do
-        on host, "grep $(sed 's/^-.*//g' /etc/pki/cacerts/some/subdirectory/*.pem | tr -d '\n') <<< $(sed 's/^-.*//g' /etc/pki/cacerts/cacerts.pem | tr -d '\n')", :acceptable_exit_codes => [0]
+        on host, "grep $(sed 's/^-.*//g' /etc/pki/simp/cacerts/some/subdirectory/*.pem | tr -d '\n') <<< $(sed 's/^-.*//g' /etc/pki/simp/cacerts/cacerts.pem | tr -d '\n')", :acceptable_exit_codes => [0]
       end
 
       #
       # If a CA cert is added to the top level while purge=true,  expect
       # it to be removed.
       #
-      it 'copy non synced cert into /etc/pki/cacerts' do
-        on host, "cp /root/keydist2/cacerts/*.pem /etc/pki/cacerts"
+      it 'copy non synced cert into /etc/pki/simp/cacerts' do
+        on host, "cp /root/keydist2/cacerts/*.pem /etc/pki/simp/cacerts"
       end
 
       it 'should purge non synced certs' do
@@ -108,8 +124,8 @@ describe 'pki_sync' do
         apply_manifest_on(host, manifest, :catch_failures => true)
       end
 
-      it 'malformed cert should not exist in /etc/pki/cacerts' do
-        on host, "[[ -f /etc/pki/cacerts/foofile ]]", :acceptable_exit_codes => [1]
+      it 'malformed cert should not exist in /etc/pki/simp/cacerts' do
+        on host, "[[ -f /etc/pki/simp/cacerts/foofile ]]", :acceptable_exit_codes => [1]
       end
 
       it 'remove malformed cert from sync directory' do
@@ -129,21 +145,21 @@ describe 'pki_sync' do
       end
 
       it 'deleted cert should be removed from sync directory' do
-        on host, "ls -A /etc/pki/cacerts/some/subdirectory/ | grep pem", :acceptable_exit_codes => [1]
+        on host, "ls -A /etc/pki/simp/cacerts/some/subdirectory/ | grep pem", :acceptable_exit_codes => [1]
       end
 
       it 'but the directory should still exist' do
-        on host, "ls -A /etc/pki/cacerts/some/subdirectory", :acceptable_exit_codes => [0]
+        on host, "ls -A /etc/pki/simp/cacerts/some/subdirectory", :acceptable_exit_codes => [0]
       end
     end
 
     #
-    # Set purged = false.  If a cert is copied into /etc/pki/cacerts, it
+    # Set purged = false.  If a cert is copied into /etc/pki/simp/cacerts, it
     # should exist after puppet apply.
     #
     context 'with purge = false' do
       it 'copy non synced cert into /etc/pki/cacerts' do
-        on host, "cp /root/keydist2/cacerts/*.pem /etc/pki/cacerts"
+        on host, "cp /root/keydist2/cacerts/*.pem /etc/pki/simp/cacerts"
       end
 
       it 'should not purge non-synced cert' do
@@ -151,7 +167,7 @@ describe 'pki_sync' do
       end
 
       it 'the purged file should not exist' do
-        on host, "[[ -f /etc/pki/cacerts/$(ls /root/keydist2/cacerts/ | grep .pem) ]]", :acceptable_exit_codes => [0]
+        on host, "[[ -f /etc/pki/simp/cacerts/$(ls /root/keydist2/cacerts/ | grep .pem) ]]", :acceptable_exit_codes => [0]
       end
     end
   end
