@@ -11,15 +11,28 @@ describe 'pki' do
 
       context 'base' do
         it { is_expected.to compile.with_all_deps }
-        it { is_expected.to contain_class('auditd') }
+        it { is_expected.to_not contain_class('auditd') }
     
-        it { is_expected.to create_file('/etc/pki').with_ensure('directory') }
-        it { is_expected.to create_file('/etc/pki/private').with_ensure('directory') }
-        it { is_expected.to create_file('/etc/pki/public').with_ensure('directory') }
-        it { is_expected.to create_file('/etc/pki/private/test.example.domain.pem') }
-        it { is_expected.to create_file('/etc/pki/public/test.example.domain.pub') }
-        it { is_expected.to create_file('/etc/pki/cacerts').with_ensure('directory') }
+        it { is_expected.to create_file('/etc/pki/simp').with_ensure('directory') }
+        it { is_expected.to create_file('/etc/pki/simp/private').with_ensure('directory') }
+        it { is_expected.to create_file('/etc/pki/simp/public').with_ensure('directory') }
+        it { is_expected.to create_file('/etc/pki/simp/private/test.example.domain.pem') }
+        it { is_expected.to create_file('/etc/pki/simp/public/test.example.domain.pub') }
+        it { is_expected.to create_file('/etc/pki/simp/cacerts').with_ensure('directory') }
       end
+    
+      context 'with_auditd' do
+        let(:params){{ :auditd => true }}
+
+        it { is_expected.to contain_class('auditd') }
+        it { is_expected.to create_file('/etc/pki/simp').with_ensure('directory') }
+        it { is_expected.to create_file('/etc/pki/simp/private').with_ensure('directory') }
+        it { is_expected.to create_file('/etc/pki/simp/public').with_ensure('directory') }
+        it { is_expected.to create_file('/etc/pki/simp/private/test.example.domain.pem') }
+        it { is_expected.to create_file('/etc/pki/simp/public/test.example.domain.pub') }
+        it { is_expected.to create_file('/etc/pki/simp/cacerts').with_ensure('directory') }
+      end
+
     end
   end
 end
