@@ -7,7 +7,7 @@ describe 'pki::copy' do
 
       context "on #{os}" do
         let(:title) {'/test/dir'}
-        let(:params) {{ :source => "/foo/bar" }}
+        let(:params) {{ :source => "/foo/bar", :pki => true }}
 
         context 'with non-default source' do
           it { is_expected.to contain_class('pki') }
@@ -27,8 +27,8 @@ describe 'pki::copy' do
             :ensure => "directory"})
           }
         end
-        context 'with use_simp_pki=false' do
-          let(:params) {{ :use_simp_pki => false }}
+        context 'with pki=false' do
+          let(:params) {{ :pki => false }}
           it { is_expected.to_not contain_class('pki') }
         end
       end
